<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tools.fastlane.localetester.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/flag_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingBottom="20dp"
        android:src="@drawable/flag"/>

    <TextView
        android:id="@+id/greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/flag_image"
        android:paddingBottom="20dp"
        android:text="@string/hello"
        android:gravity="center"
        android:textSize="64sp"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/greeting"
        tools:text="12/9/2015"
        android:gravity="center"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/nav_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date"
        android:layout_centerHorizontal="true"
        android:text="@string/navigate"/>
</RelativeLayout>
